ny fil plus update

--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -9,17 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Programmering\\IT_hogskolan\\Machine-learning-Jenny\\.venv\\Lib\\site-packages\\tqdm\\auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    },
     {
      "data": {
       "text/html": [
@@ -157,7 +149,7 @@
        "4     0       0       0  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -257,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -311,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -413,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -474,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -505,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [
     {
@@ -773,7 +765,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -820,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
@@ -911,6 +903,233 @@
     "print(df1.head())\n",
     "print(\"\\nAndra dataset:\")\n",
     "print(df2.head())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Välj Maskininlärningsmodeller"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train-validation-test split\n",
+    "\n",
+    "- Träningsdata: Används för att träna modellerna.\n",
+    "- Valideringsdata: Används för att finjustera hyperparametrar och välja den bästa modellen.\n",
+    "- Testdata: Används för att utvärdera modellens prestanda på helt osett data."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Storlekar för df1:\n",
+      "Träningsdata: (41100, 16), (41100,)\n",
+      "Valideringsdata: (13700, 16), (13700,)\n",
+      "Testdata: (13700, 16), (13700,)\n",
+      "\n",
+      "Storlekar för df2:\n",
+      "Träningsdata: (41100, 11), (41100,)\n",
+      "Valideringsdata: (13700, 11), (13700,)\n",
+      "Testdata: (13700, 11), (13700,)\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "# Dela upp df1\n",
+    "X1 = df1.drop('cardio', axis=1)  # Features\n",
+    "y1 = df1['cardio']  # Target\n",
+    "\n",
+    "# Första delningen: 60% träningsdata, 40% temporär data (validering + test)\n",
+    "X1_train, X1_temp, y1_train, y1_temp = train_test_split(X1, y1, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Andra delningen: 50% validering, 50% test (av de 40%)\n",
+    "X1_val, X1_test, y1_val, y1_test = train_test_split(X1_temp, y1_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "# Dela upp df2\n",
+    "X2 = df2.drop('cardio', axis=1)  # Features\n",
+    "y2 = df2['cardio']  # Target\n",
+    "\n",
+    "# Första delningen: 60% träningsdata, 40% temporär data (validering + test)\n",
+    "X2_train, X2_temp, y2_train, y2_temp = train_test_split(X2, y2, test_size=0.4, random_state=42)\n",
+    "\n",
+    "# Andra delningen: 50% validering, 50% test (av de 40%)\n",
+    "X2_val, X2_test, y2_val, y2_test = train_test_split(X2_temp, y2_temp, test_size=0.5, random_state=42)\n",
+    "\n",
+    "print(\"Storlekar för df1:\")\n",
+    "print(f\"Träningsdata: {X1_train.shape}, {y1_train.shape}\")\n",
+    "print(f\"Valideringsdata: {X1_val.shape}, {y1_val.shape}\")\n",
+    "print(f\"Testdata: {X1_test.shape}, {y1_test.shape}\")\n",
+    "\n",
+    "print(\"\\nStorlekar för df2:\")\n",
+    "print(f\"Träningsdata: {X2_train.shape}, {y2_train.shape}\")\n",
+    "print(f\"Valideringsdata: {X2_val.shape}, {y2_val.shape}\")\n",
+    "print(f\"Testdata: {X2_test.shape}, {y2_test.shape}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Standardiserad data (df1):\n",
+      "[[ 1.48286895  0.37580893  0.9429844  -0.39387603 -0.30908344 -0.24031583\n",
+      "   0.49265153 -0.45681652 -0.25778318 -0.1535734   1.33059206 -0.09518108\n",
+      "  -1.17607879  1.80260358 -0.40061507 -0.73023204]\n",
+      " [-0.92307371  0.99786938 -0.53430391 -0.39387603 -0.30908344 -0.24031583\n",
+      "  -2.02983232  2.1890627  -0.25778318 -0.1535734  -0.75154514 -0.09518108\n",
+      "   0.85028317 -0.55475314 -0.40061507  1.36942773]\n",
+      " [-0.06202577  0.34535558  2.42027271 -0.39387603 -0.30908344 -0.24031583\n",
+      "   0.49265153 -0.45681652 -0.25778318 -0.1535734   1.33059206 -0.09518108\n",
+      "  -1.17607879  1.80260358 -0.40061507  1.36942773]\n",
+      " [ 0.78858838 -0.80090855 -0.53430391 -0.39387603  3.2353723  -0.24031583\n",
+      "   0.49265153 -0.45681652 -0.25778318 -0.1535734   1.33059206 -0.09518108\n",
+      "   0.85028317 -0.55475314 -0.40061507  1.36942773]\n",
+      " [-0.79942806  0.14720578 -0.53430391 -0.39387603 -0.30908344 -0.24031583\n",
+      "  -2.02983232 -0.45681652 -0.25778318 -0.1535734  -0.75154514 -0.09518108\n",
+      "  -1.17607879  1.80260358 -0.40061507  1.36942773]]\n",
+      "\n",
+      "Standardiserad data (df2):\n",
+      "[[ 1.48286895  0.37580893  0.79906113  0.90907014  0.9429844  -0.39387603\n",
+      "  -0.30908344 -0.24031583  0.49265153 -0.3318276  -0.73023204]\n",
+      " [-0.92307371  0.99786938  0.20103554  0.90907014 -0.53430391 -0.39387603\n",
+      "  -0.30908344 -0.24031583 -2.02983232  0.920974    1.36942773]\n",
+      " [-0.06202577  0.34535558  1.39708673  0.90907014  2.42027271 -0.39387603\n",
+      "  -0.30908344 -0.24031583  0.49265153  0.08612101  1.36942773]\n",
+      " [ 0.78858838 -0.80090855 -0.39699005 -0.13831615 -0.53430391 -0.39387603\n",
+      "   3.2353723  -0.24031583  0.49265153 -0.00923688  1.36942773]\n",
+      " [-0.79942806  0.14720578  0.79906113  0.90907014 -0.53430391 -0.39387603\n",
+      "  -0.30908344 -0.24031583 -2.02983232 -0.69630383  1.36942773]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "\n",
+    "# Skapa skalare\n",
+    "standard_scaler = StandardScaler()\n",
+    "\n",
+    "\n",
+    "# Skala tränings-, validerings- och testdata för df1:\n",
+    "# Standardisering\n",
+    "X1_train_standard = standard_scaler.fit_transform(X1_train)\n",
+    "X1_val_standard = standard_scaler.transform(X1_val)\n",
+    "X1_test_standard = standard_scaler.transform(X1_test)\n",
+    "\n",
+    "# Skala tränings-, validerings- och testdata för df2:\n",
+    "# Standardisering\n",
+    "X2_train_standard = standard_scaler.fit_transform(X2_train)\n",
+    "X2_val_standard = standard_scaler.transform(X2_val)\n",
+    "X2_test_standard = standard_scaler.transform(X2_test)\n",
+    "\n",
+    "print(\"Standardiserad data (df1):\")\n",
+    "print(X1_train_standard[:5])\n",
+    "\n",
+    "print(\"\\nStandardiserad data (df2):\")\n",
+    "print(X2_train_standard[:5])\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Skapar en funktion för att utföra GridsearchCV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bästa parametrar för RandomForest: {'max_depth': 10, 'min_samples_split': 2, 'n_estimators': 30}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "def perform_grid_search(model, param_grid, X_train, y_train, cv=5, scoring='accuracy'):\n",
+    "    \"\"\"\n",
+    "    Utför GridSearchCV för en given modell och parametergrid.\n",
+    "    \n",
+    "    :param model: Maskininlärningsmodellen (t.ex. RandomForestClassifier).\n",
+    "    :param param_grid: Dictionary med hyperparametrar att testa.\n",
+    "    :param X_train: Träningsdata (features).\n",
+    "    :param y_train: Träningsdata (target).\n",
+    "    :param cv: Antal folds för korsvalidering (default: 5).\n",
+    "    :param scoring: Mätvärde för att välja bästa modell (default: 'accuracy').\n",
+    "    :return: Den bästa modellen och dess parametrar.\n",
+    "    \"\"\"\n",
+    "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=cv, scoring=scoring)\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    return grid_search.best_estimator_, grid_search.best_params_\n",
+    "\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Definiera parametergrid, för RandomForestClassifier:\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [10, 20, 30],\n",
+    "    'max_depth': [None, 10, 20, 30],\n",
+    "    'min_samples_split': [2, 5, 10]\n",
+    "}\n",
+    "\n",
+    "# Skapa modell\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_rf_model, best_rf_params = perform_grid_search(rf_model, param_grid_rf, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för RandomForest:\", best_rf_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bästa parametrar för LogisticRegression: {'C': 0.01, 'penalty': 'l2', 'solver': 'liblinear'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Definiera parametergrid\n",
+    "param_grid_lr = {\n",
+    "    'C': [0.01, 0.1, 1, 10],\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'solver': ['liblinear']\n",
+    "}\n",
+    "\n",
+    "# Skapa modell\n",
+    "lr_model = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_lr_model, best_lr_params = perform_grid_search(lr_model, param_grid_lr, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för LogisticRegression:\", best_lr_params)"
    ]
   }
  ],
