--- a/Labb/Laboration_1_Medical Prediction.ipynb
+++ b/Labb/Laboration_1_Medical Prediction.ipynb
@@ -1131,6 +1131,28 @@
     "best_lr_model, best_lr_params = perform_grid_search(lr_model, param_grid_lr, X1_train_standard, y1_train)\n",
     "print(\"Bästa parametrar för LogisticRegression:\", best_lr_params)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.svm import SVC\n",
+    "\n",
+    "# Definiera parametergrid\n",
+    "param_grid_svc = {\n",
+    "    'C': [0.1, 1, 10],\n",
+    "    'kernel': ['linear']\n",
+    "}\n",
+    "\n",
+    "# Skapa modell\n",
+    "svc_model = SVC(random_state=42)\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_svc_model, best_svc_params = perform_grid_search(svc_model, param_grid_svc, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för SVC:\", best_svc_params)"
+   ]
   }
  ],
  "metadata": {
