--- a/Lektion/kod_snuttar_labb.ipynb
+++ b/Lektion/kod_snuttar_labb.ipynb
@@ -157,6 +157,274 @@
     "print(\"\\nResultat för df2:\")\n",
     "print(result_df2)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "\n",
+    "# Definiera parametergrid, för RandomForestClassifier:\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [10, 20, 30], # Antal träd i skogen\n",
+    "    'max_depth': [None, 10, 20, 30], # Maxdjup för varje träd, (None: träden växer tills alla blad är rena.)\n",
+    "    'min_samples_split': [2, 5, 10] # Minsta antal sampel som krävs.\n",
+    "}\n",
+    "\n",
+    "# Skapa modell\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_rf_model, best_rf_params = perform_grid_search(rf_model, param_grid_rf, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för RandomForest:\", best_rf_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "# Definiera parametergrid, för LogisticRegression\n",
+    "param_grid_lr = {\n",
+    "    'C': [0.01, 0.1, 1, 10],\n",
+    "    'penalty': ['l1', 'l2'],\n",
+    "    'solver': ['liblinear']\n",
+    "}\n",
+    "\n",
+    "# Skapa modell\n",
+    "lr_model = LogisticRegression(random_state=42)\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_lr_model, best_lr_params = perform_grid_search(lr_model, param_grid_lr, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för LogisticRegression:\", best_lr_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import GradientBoostingClassifier\n",
+    "\n",
+    "# Definiera parametergrid för GradienBoostingClassifier\n",
+    "param_grid_gb = {\n",
+    "    'n_estimators': [10, 20, 30],\n",
+    "    'learning_rate': [0.01, 0.1, 1],\n",
+    "    'max_depth': [3, 5, 10]\n",
+    "}\n",
+    "\n",
+    "# Skapa modell\n",
+    "gb_model = GradientBoostingClassifier(random_state=42)\n",
+    "\n",
+    "# Använd GridSearchCV\n",
+    "best_gb_model, best_gb_params = perform_grid_search(gb_model, param_grid_gb, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för GradientBoosting:\", best_gb_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "\n",
+    "# Definiera parametergrid för KneighborsClassifier\n",
+    "param_grid_knn = {\n",
+    "    'n_neighbors': [3, 5, 7, 9],  # Antal grannar\n",
+    "    'weights': ['uniform', 'distance'],  # Viktning: 'uniform' eller 'distance'\n",
+    "    'p': [1,2] # Avståndsmått: 1 för Manhattan, 2 för Euklidiskt avstånd\n",
+    "}\n",
+    "\n",
+    "knn_model = KNeighborsClassifier()\n",
+    "\n",
+    "best_knn_model, best_knn_params = perform_grid_search(knn_model, param_grid_knn, X1_train_standard, y1_train)\n",
+    "print(\"Bästa parametrar för KNN:\", best_knn_params)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "def train_and_evaluate_model(model, param_grid, X_train, y_train, X_val, y_val, X_test, y_test, model_name):\n",
+    "    \"\"\"\n",
+    "    Tränar en modell med GridSearchCV, gör förutsägelser på validerings- och testdata,\n",
+    "    och returnerar den bästa modellen samt noggrannheten på validerings- och testdata.\n",
+    "    \n",
+    "    :param model: Maskininlärningsmodellen (t.ex. LogisticRegression).\n",
+    "    :param param_grid: Dictionary med hyperparametrar att testa.\n",
+    "    :param X_train: Träningsdata (features).\n",
+    "    :param y_train: Träningsdata (target).\n",
+    "    :param X_val: Valideringsdata (features).\n",
+    "    :param y_val: Valideringsdata (target).\n",
+    "    :param X_test: Testdata (features).\n",
+    "    :param y_test: Testdata (target).\n",
+    "    :param model_name: Namn på modellen (för dokumentation).\n",
+    "    :return: Den bästa modellen, noggrannhet på valideringsdata, noggrannhet på testdata.\n",
+    "    \"\"\"\n",
+    "    # Utför GridSearchCV\n",
+    "    grid_search = GridSearchCV(estimator=model, param_grid=param_grid, cv=5, scoring='accuracy')\n",
+    "    grid_search.fit(X_train, y_train)\n",
+    "    \n",
+    "    # Hämta den bästa modellen\n",
+    "    best_model = grid_search.best_estimator_\n",
+    "    \n",
+    "    # Gör förutsägelser på validerings- och testdata\n",
+    "    y_val_pred = best_model.predict(X_val)\n",
+    "    y_test_pred = best_model.predict(X_test)\n",
+    "    \n",
+    "    # Beräkna noggrannhet på validerings- och testdata\n",
+    "    val_accuracy = accuracy_score(y_val, y_val_pred)\n",
+    "    test_accuracy = accuracy_score(y_test, y_test_pred)\n",
+    "    \n",
+    "    return best_model, val_accuracy, test_accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "\n",
+    "# Skapa modell\n",
+    "log_reg_model = LogisticRegression(random_state=42, solver='liblinear')\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_log_reg_model, log_reg_val_accuracy, log_reg_test_accuracy = train_and_evaluate_model(\n",
+    "    model=log_reg_model,\n",
+    "    param_grid=param_grid_logreg,\n",
+    "    X_train=X1_train_standard,\n",
+    "    y_train=y1_train,\n",
+    "    X_val=X1_val_standard,\n",
+    "    y_val=y1_val,\n",
+    "    X_test=X1_test_standard,\n",
+    "    y_test=y1_test,\n",
+    "    model_name=\"Logistic Regression\"\n",
+    ")\n",
+    "\n",
+    "\n",
+    "# Skapa modell\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Använd funktionen\n",
+    "best_rf_model, rf_val_accuracy, rf_test_accuracy = train_and_evaluate_model(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
+    "    X_train=X1_train_standard,\n",
+    "    y_train=y1_train,\n",
+    "    X_val=X1_val_standard,\n",
+    "    y_val=y1_val,\n",
+    "    X_test=X1_test_standard,\n",
+    "    y_test=y1_test,\n",
+    "    model_name=\"Random Forest\"\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Skapa modell för RandomForestClassifier:\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Använd perform_grid_search-funktionen\n",
+    "best_rf_model, best_rf_params, rf_metrics = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
+    "    X_train=X1_train_standard,\n",
+    "    y_train=y1_train,\n",
+    "    X_val=X1_val_standard,\n",
+    "    y_val=y1_val,\n",
+    "    model_name= \"Random Forest\"\n",
+    ")\n",
+    "\n",
+    "# Skriv ut resultaten\n",
+    "print(\"Bästa RandomForest-modell:\")\n",
+    "print(best_rf_model)\n",
+    "print(\"\\nBästa parametrar för RandomForest:\")\n",
+    "print(best_rf_params)\n",
+    "print(\"\\nUtvärderingsmått för RandomForest:\")\n",
+    "print(rf_metrics)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Definiera parametergrid för RandomForest\n",
+    "param_grid_rf = {\n",
+    "    'n_estimators': [10, 20, 30], # Antal träd i skogen\n",
+    "    'max_depth': [None, 10, 20, 30], # Maxdjup för varje träd, (None: träden växer tills alla blad är rena.)\n",
+    "    'min_samples_split': [2, 5, 10] # Minsta antal sampel som krävs.\n",
+    "}\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "# Skapa modell för RandomForestClassifier:\n",
+    "rf_model = RandomForestClassifier(random_state=42)\n",
+    "\n",
+    "# Träna och utvärdera RandomForest på df1 - Standardization\n",
+    "best_rf_model_df1, best_rf_params_df1, rf_metrics_df1 = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
+    "    X_train=X1_train_standard,\n",
+    "    y_train=y1_train,\n",
+    "    X_val=X1_val_standard,\n",
+    "    y_val=y1_val,\n",
+    "    model_name=\"Random Forest Standardization (df1)\"\n",
+    ")\n",
+    "\n",
+    "# Träna och utvärdera RandomForest på df2 - Standardization\n",
+    "best_rf_model_df2, best_rf_params_df2, rf_metrics_df2 = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
+    "    X_train=X2_train_standard,\n",
+    "    y_train=y2_train,\n",
+    "    X_val=X2_val_standard,\n",
+    "    y_val=y2_val,\n",
+    "    model_name=\"Random Forest Standardization (df2)\"\n",
+    ")\n",
+    "\n",
+    "# Träna och utvärdera RandomForest på df1 - Normalization\n",
+    "best_rf_model_df1_minmax, best_rf_params_df1_minmax, rf_metrics_df1_minmax = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
+    "    X_train=X1_train_minmax,\n",
+    "    y_train=y1_train,\n",
+    "    X_val=X1_val_minmax,\n",
+    "    y_val=y1_val,\n",
+    "    model_name=\"Random Forest Normalization (df1)\"\n",
+    ")\n",
+    "\n",
+    "# Träna och utvärdera RandomForest på df2 - Normalization\n",
+    "best_rf_model_df2_minmax, best_rf_params_df2_minmax, rf_metrics_df2_minmax = perform_grid_search(\n",
+    "    model=rf_model,\n",
+    "    param_grid=param_grid_rf,\n",
+    "    X_train=X2_train_minmax,\n",
+    "    y_train=y2_train,\n",
+    "    X_val=X2_val_minmax,\n",
+    "    y_val=y2_val,\n",
+    "    model_name=\"Random Forest Normalization (df2)\"\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
